added ports in compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
       - CVAR_HOSTNAME=My left 4 dead server
       - CVAR_RCON_PASSWORD=password123
       - CVAR_MP_DISABLE_AUTOKICK=1
+    ports:
+      - 27015:27015
+      - 27015:27015/udp
