Revert "less default config"
This reverts commit 04518e61f70c427ac64ccee449254660784d8e00.

--- a/server.cfg
+++ b/server.cfg
@@ -1,2 +1,14 @@
 hostname "Left4Dead2 Server"
+
+sv_allow_lobby_connect_only "0"
+
+mp_disable_autokick "1"
+sv_alltalk "0"
+sv_consistency "1"
+sv_voiceenable "1"
+
+sv_log_onefile "0"
+sv_logbans "1"
 sv_lan "0"
+sv_pure "1"
+sv_cheats "0"
